force-app/main/default/objects/cgcloud__Account_Task__c/cgcloud__Account_Task__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the customer task (customer issue).</description>
    <label>Customer Task</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Customer Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>