force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to the customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Tasks</relationshipLabel>
    <relationshipName>Customer_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>