force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Account_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the template.</description>
    <label>Customer Task Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Account_Task_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Account_Task_Template__c</referenceTo>
    <relationshipLabel>Customer Tasks</relationshipLabel>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>