force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Accountable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accountable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the owner of the task.</description>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>