force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Asset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to asset.</description>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Customer Task and the Asset must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>Asset.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Tasks</relationshipLabel>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>