force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Classification__c</fullName>
    <description>Specifies the area that causes the issue.</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
                <default>true</default>
                <label>Inquiry</label>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>TimeEntry</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Repair Asset</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance</fullName>
            </value>
            <value>
                <fullName>Asset Replacement</fullName>
            </value>
            <value>
                <fullName>Asset Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>