force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Due_Date__c</fullName>
    <description>The date the action should have been done.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>