force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>Note for a customer task.</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>