force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phase__c</fullName>
    <description>Phase of the customer task.</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>