force-app/main/default/objects/cgcloud__Account_Task__c/fields/cgcloud__Priority__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Priority__c</fullName>
    <description>Priority of the customer task.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>