force-app/main/default/objects/cgcloud__Account_Task__c/recordTypes/cgcloud__Customer_Task_Editable.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Task_Editable</fullName>
    <active>true</active>
    <description>Custom record type for Customer Task</description>
    <label>Customer Task Editable</label>
</RecordType>