force-app/main/default/objects/cgcloud__Account_Task__c/recordTypes/cgcloud__Customer_Task_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Task_Read_Only</fullName>
    <active>true</active>
    <description>This is showing the Locked Customer Task Layout, where Phase is canceled or Completed</description>
    <label>Customer Task Read Only</label>
</RecordType>