force-app/main/default/objects/cgcloud__Account_Task__c/validationRules/cgcloud__Due_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Due_Date_Validation</fullName>
    <active>true</active>
    <description>Validating Due Date</description>
    <errorConditionFormula>cgcloud__Due_Date__c &lt;  cgcloud__Creation_Date__c</errorConditionFormula>
    <errorMessage>The Due Date must be greater than or equal to Initiation Date.</errorMessage>
</ValidationRule>