force-app/main/default/objects/cgcloud__Account_Task__c/validationRules/cgcloud__Mandatory_Entries.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_Entries</fullName>
    <active>true</active>
    <description>The Customer Task mandatory fields can&apos;t be empty.</description>
    <errorConditionFormula>OR(
  ISBLANK(cgcloud__Account__c),
  ISBLANK(cgcloud__Description_Language_1__c),
  ISBLANK(cgcloud__Account_Task_Template__c),
  ISPICKVAL(cgcloud__Priority__c,&quot;&quot;)
  )</errorConditionFormula>
    <errorMessage>The Customer Task mandatory fields can&apos;t be empty.</errorMessage>
</ValidationRule>