force-app/main/default/objects/cgcloud__Account_Task__c/validationRules/cgcloud__Prevent_Customer_Task_Template_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Customer_Task_Template_Change</fullName>
    <active>true</active>
    <description>The Customer Task Template can&apos;t be edited after Customer creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Account_Task_Template__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Account_Task_Template__c</errorDisplayField>
    <errorMessage>The Customer Task Template can&apos;t be edited after Customer creation.</errorMessage>
</ValidationRule>